<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".StaffActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:titleTextColor="@color/menuFg" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/staff_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:textColor="#000000"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/staff_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/staff_jobtitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textColor="@android:color/darker_gray"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/staff_department_header"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/staff_departments"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/staff_department"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/staff_division_header"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/staff_divisions"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/staff_division"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/staff_institutes_header"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/staff_institute"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/staff_institutes"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/staff_programs_header"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/staff_progs"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/staff_programs"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/staff_courses_header"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/staff_courses"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/staff_courses"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/staff_bio_header"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/staff_bio"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/staff_bio"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/staff_projects_header"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/staff_projects"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textSize="15sp" />

            <LinearLayout
                android:id="@+id/staff_projects"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/staff_links"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textSize="15sp" />

            <LinearLayout
                android:id="@+id/staff_links"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/staff_contact"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/staff_contact"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/send_sms"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_margin="1dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_sms" />

                    <ImageView
                        android:id="@+id/send_email"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_margin="1dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_email" />

                    <ImageView
                        android:id="@+id/make_call"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="1dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_call" />

                </LinearLayout>
            </HorizontalScrollView>

        </LinearLayout>
    </ScrollView>
</LinearLayout>