<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:titleTextColor="@color/menuFg" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/uni_name"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="100dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="10dp"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/fhstp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:justificationMode="inter_word"
                    android:text="@string/about_us"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/news"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp" />

                <LinearLayout
                    android:id="@+id/news_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/contactTitle"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contact" />

                <HorizontalScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/social_facebook"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_margin="1dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:scaleType="fitCenter"
                            android:src="@drawable/ic_facebook" />

                        <ImageView
                            android:id="@+id/social_linkedin"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_margin="1dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:scaleType="fitCenter"
                            android:src="@drawable/ic_linkedin" />

                        <ImageView
                            android:id="@+id/social_twitter"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_margin="1dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:scaleType="fitCenter"
                            android:src="@drawable/ic_twitter" />

                        <ImageView
                            android:id="@+id/social_youtube"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_margin="1dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:scaleType="fitCenter"
                            android:src="@drawable/ic_youtube" />

                        <ImageView
                            android:id="@+id/social_instagram"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_margin="1dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:scaleType="fitCenter"
                            android:src="@drawable/ic_instagram" />

                        <ImageView
                            android:id="@+id/send_email"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_margin="1dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:scaleType="fitCenter"
                            android:src="@drawable/ic_email" />

                        <ImageView
                            android:id="@+id/make_call"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_margin="1dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:scaleType="fitCenter"
                            android:src="@drawable/ic_call" />

                    </LinearLayout>
                </HorizontalScrollView>


            </LinearLayout>
        </ScrollView>
    </LinearLayout>


    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/menuheader"
        app:menu="@menu/sidemenu" />

</android.support.v4.widget.DrawerLayout>